--- a/src/styles/WelcomeScreen.css
+++ b/src/styles/WelcomeScreen.css
@@ -95,6 +95,10 @@
   .agent-button {
     background-color: #FF9800;
   }
+
+  .agent-button1 {
+    background-color: #474ae4;
+  }
   
   .admin-button {
     background-color: #F44336;
